Fixed layout problems

--- a/src/myProducts.Web/app/content/css/app.css
+++ b/src/myProducts.Web/app/content/css/app.css
@@ -18,6 +18,13 @@ h2 {
     margin-bottom: 10px;
 }
 
+h1,
+h2,
+h3 {
+  line-height: 40px;
+  font-weight:bold;
+}
+
 .svg {
     height: auto;
 }
@@ -93,6 +100,10 @@ h2 {
   text-decoration: none;
   text-shadow: 0 1px 0 #ffffff;
   padding: 2em 15px 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-right: 2px;
+  line-height: 14px;
 }
 
 .nav-pills > .active > a,
@@ -135,6 +146,9 @@ h2 {
     border-bottom-color: #FF6600;
     color: #000 !important;
     background-color: transparent !important;
+    webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
+    -moz-box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
 }
 .navbar-nav > li > a:hover {
     text-decoration: none;
@@ -176,6 +190,7 @@ h2 {
     right: 0;
     background: #B1BDCC;
     padding: 1em;
+    z-index:3;
 }
 
     #footer a {
@@ -274,4 +289,11 @@ h2 {
     font-weight: 200;
     color: #777777;
     text-shadow: 0 1px 0 #ffffff;
+}
+.form-actions {
+    padding: 19px 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #e5e5e5;
 }
