--- a/src/myProducts.Web/app/content/css/tweak-bootstrap.css
+++ b/src/myProducts.Web/app/content/css/tweak-bootstrap.css
@@ -1,3 +1,3 @@
 ﻿#mainContainer {
-    padding-top: 6rem;
+    padding-top: 8rem;
 }
